// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Summary Status Component should allow label to be optional 1`] = `
<div
  class="monSummaryStatusNoWrap"
  intl="[object Object]"
>
  <div
    class="euiFlexGroup euiFlexGroup--gutterMedium euiFlexGroup--alignItemsCenter euiFlexGroup--justifyContentSpaceBetween euiFlexGroup--directionRow euiFlexGroup--responsive"
  >
    <div
      class="euiFlexItem euiFlexItem--flexGrowZero eui-textTruncate"
      style="max-width:200px"
    >
      <div
        class="euiStat euiStat--leftAligned monSummaryStatusNoWrap__stat"
      >
        <div
          class="euiText euiText--small euiStat__description"
        >
          <p
            aria-hidden="true"
          >
            Status
          </p>
        </div>
        <p
          aria-hidden="true"
          class="euiTitle euiTitle--xxxsmall euiStat__title"
        >
          Status: 
        </p>
        <div
          alt="Status: yellow"
          color="warning"
          data-euiicon-type="dot"
          data-test-subj="statusIcon"
        />
         Yellow
        <p />
        <p
          class="euiScreenReaderOnly"
        >
          Status [object Object]
        </p>
      </div>
    </div>
    <div
      class="euiFlexItem euiFlexItem--flexGrowZero"
      data-test-subj="transportAddress"
      style="max-width:200px"
    >
      <div
        class="euiStat euiStat--leftAligned monSummaryStatusNoWrap__stat"
      >
        <div
          class="euiText euiText--small euiStat__description"
        >
          <p
            aria-hidden="true"
          />
        </div>
        <p
          aria-hidden="true"
          class="euiTitle euiTitle--xxxsmall euiStat__title"
        >
          127.0.0.1:9300
        </p>
        <p
          class="euiScreenReaderOnly"
        >
           127.0.0.1:9300
        </p>
      </div>
    </div>
    <div
      class="euiFlexItem euiFlexItem--flexGrowZero"
      data-test-subj="documentCount"
      style="max-width:200px"
    >
      <div
        class="euiStat euiStat--leftAligned monSummaryStatusNoWrap__stat"
      >
        <div
          class="euiText euiText--small euiStat__description"
        >
          <p
            aria-hidden="true"
          >
            Documents
          </p>
        </div>
        <p
          aria-hidden="true"
          class="euiTitle euiTitle--xxxsmall euiStat__title"
        >
          24.8k
        </p>
        <p
          class="euiScreenReaderOnly"
        >
          Documents 24.8k
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Summary Status Component should allow status to be optional 1`] = `
<div
  class="monSummaryStatusNoWrap"
  intl="[object Object]"
>
  <div
    class="euiFlexGroup euiFlexGroup--gutterMedium euiFlexGroup--alignItemsCenter euiFlexGroup--justifyContentSpaceBetween euiFlexGroup--directionRow euiFlexGroup--responsive"
  >
    <div
      class="euiFlexItem euiFlexItem--flexGrowZero"
      data-test-subj="freeDiskSpace"
      style="max-width:200px"
    >
      <div
        class="euiStat euiStat--leftAligned monSummaryStatusNoWrap__stat"
      >
        <div
          class="euiText euiText--small euiStat__description"
        >
          <p
            aria-hidden="true"
          >
            Free Disk Space
          </p>
        </div>
        <p
          aria-hidden="true"
          class="euiTitle euiTitle--xxxsmall euiStat__title"
        >
          173.9 GB
        </p>
        <p
          class="euiScreenReaderOnly"
        >
          Free Disk Space 173.9 GB
        </p>
      </div>
    </div>
    <div
      class="euiFlexItem euiFlexItem--flexGrowZero"
      data-test-subj="documentCount"
      style="max-width:200px"
    >
      <div
        class="euiStat euiStat--leftAligned monSummaryStatusNoWrap__stat"
      >
        <div
          class="euiText euiText--small euiStat__description"
        >
          <p
            aria-hidden="true"
          >
            Documents
          </p>
        </div>
        <p
          aria-hidden="true"
          class="euiTitle euiTitle--xxxsmall euiStat__title"
        >
          24.8k
        </p>
        <p
          class="euiScreenReaderOnly"
        >
          Documents 24.8k
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Summary Status Component should render metrics in a summary bar 1`] = `
<div
  class="monSummaryStatusNoWrap"
  intl="[object Object]"
>
  <div
    class="euiFlexGroup euiFlexGroup--gutterMedium euiFlexGroup--alignItemsCenter euiFlexGroup--justifyContentSpaceBetween euiFlexGroup--directionRow euiFlexGroup--responsive"
  >
    <div
      class="euiFlexItem euiFlexItem--flexGrowZero eui-textTruncate"
      style="max-width:200px"
    >
      <div
        class="euiStat euiStat--leftAligned monSummaryStatusNoWrap__stat"
      >
        <div
          class="euiText euiText--small euiStat__description"
        >
          <p
            aria-hidden="true"
          >
            Status
          </p>
        </div>
        <p
          aria-hidden="true"
          class="euiTitle euiTitle--xxxsmall euiStat__title"
        >
          Status: 
        </p>
        <div
          alt="Status: green"
          color="success"
          data-euiicon-type="dot"
          data-test-subj="statusIcon"
        />
         Green
        <p />
        <p
          class="euiScreenReaderOnly"
        >
          Status [object Object]
        </p>
      </div>
    </div>
    <div
      class="euiFlexItem euiFlexItem--flexGrowZero"
      data-test-subj="freeDiskSpace"
      style="max-width:200px"
    >
      <div
        class="euiStat euiStat--leftAligned monSummaryStatusNoWrap__stat"
      >
        <div
          class="euiText euiText--small euiStat__description"
        >
          <p
            aria-hidden="true"
          >
            Free Disk Space
          </p>
        </div>
        <p
          aria-hidden="true"
          class="euiTitle euiTitle--xxxsmall euiStat__title"
        >
          173.9 GB
        </p>
        <p
          class="euiScreenReaderOnly"
        >
          Free Disk Space 173.9 GB
        </p>
      </div>
    </div>
    <div
      class="euiFlexItem euiFlexItem--flexGrowZero"
      data-test-subj="documentCount"
      style="max-width:200px"
    >
      <div
        class="euiStat euiStat--leftAligned monSummaryStatusNoWrap__stat"
      >
        <div
          class="euiText euiText--small euiStat__description"
        >
          <p
            aria-hidden="true"
          >
            Documents
          </p>
        </div>
        <p
          aria-hidden="true"
          class="euiTitle euiTitle--xxxsmall euiStat__title"
        >
          24.8k
        </p>
        <p
          class="euiScreenReaderOnly"
        >
          Documents 24.8k
        </p>
      </div>
    </div>
  </div>
</div>
`;
